CLI an cre test s passed